--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -297,23 +297,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: 3.590444254130357\n",
-      "P-value: 0.0002567969150153481\n",
+      "T-statistic: 4.4991348531252635\n",
+      "P-value: 7.0097137393088205e-06\n",
       "Reject the null hypothesis: Dragon-type Pokémon have significantly higher average HP than Grass-type Pokémon.\n"
      ]
     }
    ],
    "source": [
+    "# MOD: considerar Type 1 y Type 2 para Dragon/Grass (pequeña mejora)\n",
+    "dragon_mask = (df['Type 1'] == 'Dragon') | ((\"Type 2\" in df.columns) & (df['Type 2'] == 'Dragon'))\n",
+    "grass_mask  = (df['Type 1'] == 'Grass')  | ((\"Type 2\" in df.columns) & (df['Type 2'] == 'Grass'))\n",
+    "dragon_hp = df.loc[dragon_mask, 'HP'].dropna()\n",
+    "grass_hp  = df.loc[grass_mask,  'HP'].dropna()\n",
     "# Filter HP values for Dragon and Grass types\n",
-    "dragon_hp = df[df['Type 1'] == 'Dragon']['HP']\n",
-    "grass_hp = df[df['Type 1'] == 'Grass']['HP']\n",
     "\n",
     "# Perform a one-tailed t-test\n",
     "t_stat, p_value = st.ttest_ind(dragon_hp, grass_hp, alternative='greater')\n",
@@ -381,6 +384,96 @@
     "        print(f\"  -> Significant difference in {stat} between Legendary and Non-Legendary Pokémon.\")\n",
     "    else:\n",
     "        print(f\"  -> No significant difference in {stat} between Legendary and Non-Legendary Pokémon.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Legendary</th>\n",
+       "      <th>Non-Legendary</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>67.182313</td>\n",
+       "      <td>92.738462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>75.669388</td>\n",
+       "      <td>116.676923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>71.559184</td>\n",
+       "      <td>99.661538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>68.454422</td>\n",
+       "      <td>122.184615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>68.892517</td>\n",
+       "      <td>105.938462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>65.455782</td>\n",
+       "      <td>100.184615</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Legendary  Non-Legendary   Legendary\n",
+       "HP             67.182313   92.738462\n",
+       "Attack         75.669388  116.676923\n",
+       "Defense        71.559184   99.661538\n",
+       "Sp. Atk        68.454422  122.184615\n",
+       "Sp. Def        68.892517  105.938462\n",
+       "Speed          65.455782  100.184615"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# MOD: mostrar también medias por grupo para contextualizar las diferencias\n",
+    "import pandas as pd\n",
+    "stats_cols = [c for c in ['HP','Attack','Defense','Sp. Atk','Sp. Def','Speed'] if c in df.columns]\n",
+    "if stats_cols:\n",
+    "    means_table = df.groupby('Legendary')[stats_cols].mean().rename(index={True:'Legendary', False:'Non-Legendary'})\n",
+    "    display(means_table.T)\n",
+    "else:\n",
+    "    print('No se encontraron columnas de estadísticas estándar para mostrar medias.')"
    ]
   },
   {
